pubs: Include a reference to Urquhart's comparison of fellwalker and clumpfind
Is this really a suitable document for a reference though?

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -121,3 +121,13 @@ booktitle = {Astronomical Data Analysis Software and Systems XIX},
    adsurl = {http://adsabs.harvard.edu/abs/2010ASPC..434..213B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@Misc{2013Urquhart,
+ author = {J. Urquhart},
+  title = "{CUPID Routine Evaluation}",
+  month = apr,
+   year = {2013},
+    url = {http://www.jach.hawaii.edu/jps/SourceExtractionTWG?action=AttachFile&do=view&target=CUPID+Routine+Evaluation.pdf},
+}
+
+
