--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -503,7 +503,8 @@ the source code for the CUPID package is open-source and is available on github 
 
 \section{Comparing FellWalker and CLUMPFIND}
 
-Include some references to earlier investigations? \citep[e.g.][]{2010Watson}
+Include some references to earlier investigations?
+\citep[e.g.][]{2010Watson,2013Urquhart}
 
 May want to consider \citep{2012PASA...29..301W} which uses
 DUCHAMP \citep[][\ascl{1201.011}]{2012MNRAS.421.3242W}.
