cgs3dr: Tweaks to SUN/206

--- a/applications/obsolete/cgs3dr/sun206.tex
+++ b/applications/obsolete/cgs3dr/sun206.tex
@@ -520,7 +520,7 @@ to invoke the action or abort the option respectively. This is common practice t
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,60)
-   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig1.ps}}}
+   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig1}}}
   \end{picture}
   \caption{The Exit Confirmation Box} \label{sun206_fig1}
  \end{center}
@@ -534,7 +534,7 @@ items invoke {\em separate} incantations of {\sc netscape}.
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,60)
-   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig2.ps}}}
+   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig2}}}
   \end{picture}
   \caption{The Help Menu} \label{sun206_fig2}
  \end{center}
@@ -545,7 +545,7 @@ The {\sf Options} menu is shown in figure \ref{sun206_fig3}.
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,60)
-   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig3.ps}}}
+   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig3}}}
   \end{picture}
   \caption{The Options Menu} \label{sun206_fig3}
  \end{center}
@@ -557,7 +557,7 @@ to re-initialise the software for another dataset without exiting the interface.
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,60)
-   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig4.ps}}}
+   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig4}}}
   \end{picture}
   \caption{The Set Directory/Date Option} \label{sun206_fig4}
  \end{center}
@@ -571,7 +571,7 @@ action name to send to the selected task and is used for debugging.
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,100)
-   \put(-1,0){\makebox(160,100){\includegraphics{sun206_fig5.ps}}}
+   \put(-1,0){\makebox(160,100){\includegraphics{sun206_fig5}}}
   \end{picture}
   \caption{The Task Action Option} \label{sun206_fig5}
  \end{center}
@@ -622,7 +622,7 @@ ready.
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,75)
-   \put(-1,0){\makebox(160,75){\includegraphics{sun206_fig6.ps}}}
+   \put(-1,0){\makebox(160,75){\includegraphics{sun206_fig6}}}
   \end{picture}
   \caption{The Startup Box} \label{sun206_fig6}
  \end{center}
@@ -705,7 +705,7 @@ tasks action. These are not shown.
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,160)
-   \put(-1,0){\makebox(160,160){\includegraphics{sun206_fig8.ps}}}
+   \put(-1,0){\makebox(160,160){\includegraphics{sun206_fig8}}}
   \end{picture}
   \caption{The Set Parameters Dialogue Box} \label{sun206_fig8}
  \end{center}
@@ -716,7 +716,7 @@ tasks action. These are not shown.
  \setlength{\unitlength}{1mm}
  \begin{center}
   \begin{picture}(160,60)
-   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig7.ps}}}
+   \put(-1,0){\makebox(160,60){\includegraphics{sun206_fig7}}}
   \end{picture}
   \caption{The CGS3DR Interface} \label{sun206_fig7}
  \end{center}
