--- a/applications/convert/sun55.tex
+++ b/applications/convert/sun55.tex
@@ -14,7 +14,7 @@
 \newcommand{\stardocinitials}  {SUN}
 \newcommand{\stardocsource}    {sun\stardocnumber}
 \newcommand{\stardoccopyright}
-{Copyright \copyright\ 2005 Council for the Central Laboratory of the Research Councils}
+{Copyright \copyright\ 2014 Science and Technology Research Council}
 
 % Variable part - replace [xxx] as appropriate.
 \newcommand{\stardocnumber}    {55.30}
