docs: Add more Starlink definitions to SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -537,10 +537,12 @@
 % KAPPA
 \newcommand{\beamfit}{\xref{\task{beamfit}}{sun95}{BEAMFIT}}
 \newcommand{\cmult}{\xref{\task{cmult}}{sun95}{CMULT}}
+\newcommand{\compave}{\xref{\task{compave}}{sun95}{COMPAVE}}
 \newcommand{\configecho}{\xref{\task{configecho}}{sun95}{CONFIGECHO}}
 \newcommand{\fitslist}{\xref{\task{fitslist}}{sun95}{FITSLIST}}
 \newcommand{\fitsval}{\xref{\task{fitsval}}{sun95}{FITSVAL}}
 \newcommand{\hislist}{\xref{\task{hislist}}{sun95}{HISLIST}}
+\newcommand{\histat}{\xref{\task{histat}}{sun95}{HISTAT}}
 \newcommand{\histogram}{\xref{\task{histogram}}{sun95}{HISTOGRAM}}
 \newcommand{\makesnr}{\xref{\task{makesnr}}{sun95}{MAKESNR}}
 \newcommand{\ndfcopy}{\xref{\task{ndfcopy}}{sun95}{NDFCOPY}}
@@ -556,6 +558,7 @@
 
 % CUPID
 \newcommand{\findback}{\xref{\task{findback}}{sun255}{FINDBACK}}
+\newcommand{\findclumps}{\xref{\task{findclumps}}{sun255}{FINDCLUMPS}}
 
 % Misc
 \newcommand{\autophotom}{\xref{\task{autophotom}}{sun45}{AUTOPHOTOM}}
